discussion/kv_engine/177008/177008_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Create standalone unit test for GetRandomKey

There is something "strange" with the implementation of GetRandomKey
on the server as it seems to be a delay until the key gets available
after being stored on the server.

After storing a document you may immediately fetch it through a
call with get, but that doesn't seem to be the case with GetRandomKey
as I had to add a few retries until it got available.

Change-Id: Iaa0a2f76822bf4701c79ac65eaab6ca9fb0833a4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 07:44:11.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 08:00:36.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39743/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39743/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8202/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8202/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21403/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21403/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20415/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20415/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8301/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8301/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20763/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20763/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28796/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28796/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19637/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19637/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18531/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:30:20: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
            conn = cluster->getConnection(0);
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:47:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:96:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:206:30: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
                        std::this_thread::sleep_for(
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:633:23: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto connection = cluster->getConnection(0);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:855:19: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto bucket = cluster->getBucket("metering");
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18531/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:30:20:
error: use of undeclared identifier "cluster" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18531/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17681/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
